--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<h3>Score: <span id="score"></span></h3>
+	<h3>Lives: <span id="lives"></span></h3>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
